--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Your go-to app for easy task management. Stay organized and productive effortlessly.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "dotenvx run -- nodemon src/index"
   },
   "keywords": [
     "TodoMate",
@@ -16,5 +17,10 @@
   "devDependencies": {
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
+  },
+  "dependencies": {
+    "@dotenvx/dotenvx": "^1.5.0",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.5"
   }
 }
