--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ node_modules/
 jspm_packages/
 keys/
 
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
@@ -139,3 +140,5 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+# Some files
+Notes.txt
