--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
     "@dotenvx/dotenvx": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "uuid": "^10.0.0"
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
